--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,21 @@
   src: url("https://fonts.googleapis.com/css?family=Space+Mono&display=swap");
 }
 
+button {
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button[data-active="true"] {
+  background-color: #26c2ae;
+}
+
 input {
   all: unset;
   text-indent: 1.2rem;
@@ -18,8 +33,8 @@ body {
 
 .title {
   text-align: center;
-  margin-top: 8rem;
-  margin-bottom: 5rem;
+  margin-top: 5rem;
+  margin-bottom: 3rem;
 }
 
 .align {
@@ -83,12 +98,22 @@ body {
   background-color: #00474b;
   border: 0;
   border-radius: 8px;
-  padding: 0;
+  padding: 0.7rem;
+  cursor: pointer;
+
+  color: white;
+  font-family: "Space Mono";
+  font-size: 1.5rem;
+  text-align: center;
+  /* margin: 1rem; */
+}
+
+check[data-active="true"] {
+  background-color: #26c2ae;
 }
 
 .btn:hover {
   background-color: #26c2ae;
-  cursor: pointer;
 }
 
 .btn p {
@@ -177,6 +202,10 @@ body {
   border-radius: 10px;
   font-family: "Space Mono";
   color: #00474b;
+}
+
+.reset:hover {
+  background-color: #9fe8df;
 }
 
 @media (max-width: 900px) {
